--- a/src/stories/assets/scss/_variable.scss
+++ b/src/stories/assets/scss/_variable.scss
@@ -33,5 +33,6 @@ $shadow-convex-large: 5rem 0.5rem 0.12rem #a5bac773,
   -0.5rem -5rem 0.1rem #ffffffcc;
 $shadow-icon: 0.1rem 0.3rem 0.3rem #43afb640, -0.1rem -0.1rem 0.2rem #ffffff33;
 $primary-shadow-concave: inset 0.2rem 0.2rem 0.3rem #55b3c099;
+$danger-shadow-concave: inset 0.2rem 0.2rem 0.3rem #c0545999;
 $liner-shadow-concave: inset 0.3rem 0.3rem 0.4rem #86e1dc40;
 $blur: blur(0.1rem);
