--- a/src/stories/assets/scss/_mixin.scss
+++ b/src/stories/assets/scss/_mixin.scss
@@ -17,6 +17,10 @@
   background: $primary-liner;
   box-shadow: 0 0 0 #00000000, 0 0 0 #00000000, $primary-shadow-concave;
 }
+@mixin button-active-danger {
+  background: $danger;
+  box-shadow: 0 0 0 #00000000, 0 0 0 #00000000, $danger-shadow-concave;
+}
 @mixin button-unactive {
   background: $base;
   box-shadow: $shadow-convex, inset 0 0 0 #00000000;
