--- a/src/stories/assets/scss/_variable.scss
+++ b/src/stories/assets/scss/_variable.scss
@@ -22,6 +22,7 @@ $subject-bg: #c8efefcc;
 $filter-gray: #d8deeb4d;
 
 /* Effect styles */
+$shadow-drop: 0.2rem 0.2rem 0.3rem #a1a7aa99;
 $shadow-concave: inset 0.1rem 0.2rem 0.4rem #a5bac773,
   inset -0.2rem -0.2rem 0.3rem #ffffffcc;
 $shadow-base: 0.2rem 0.4rem 0.1rem #a5bac766, -0.1rem -0.1rem 0.2rem #ffffffb3,
