--- a/src/stories/assets/scss/_variable.scss
+++ b/src/stories/assets/scss/_variable.scss
@@ -37,3 +37,7 @@ $primary-shadow-concave: inset 0.2rem 0.2rem 0.3rem #55b3c099;
 $danger-shadow-concave: inset 0.2rem 0.2rem 0.3rem #c0545999;
 $liner-shadow-concave: inset 0.3rem 0.3rem 0.4rem #86e1dc40;
 $blur: blur(0.1rem);
+
+// Media Queries
+$pc-width: 769px;
+$sp-width: 480px;
