--- a/src/stories/assets/scss/main.scss
+++ b/src/stories/assets/scss/main.scss
@@ -8,6 +8,9 @@ html {
   font-size: 62.5%;
   font-family: "Noto Sans JP", Arial, Helvetica, sans-serif;
   box-sizing: border-box;
+  @include tablet-and-pc {
+    font-size: 100%;
+  }
 }
 body {
   font-size: 1.4em;
