add variables of space and line-height

--- a/src/stories/assets/scss/_mixin.scss
+++ b/src/stories/assets/scss/_mixin.scss
@@ -29,6 +29,11 @@
   box-shadow: $shadow-convex-hover;
 }
 
+// border-radius
+@mixin radius-2 {
+  border-radius: 0.8rem;
+}
+
 // layout
 @mixin flexible() {
   display: inline-block;
