--- a/src/stories/assets/scss/_mixin.scss
+++ b/src/stories/assets/scss/_mixin.scss
@@ -4,6 +4,10 @@
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
+@mixin void-text-liner {
+  background-clip: none;
+  -webkit-text-fill-color: inherit;
+}
 
 // button
 @mixin button-cursor {
@@ -13,25 +17,22 @@
 @mixin button-transition {
   transition: box-shadow 0.18s ease;
 }
-@mixin button-active {
+@mixin button-active($negative-shadow-convex: 0 0 0 #00000000) {
   background: $primary-liner;
-  box-shadow: 0 0 0 #00000000, 0 0 0 #00000000, $primary-shadow-concave;
+  box-shadow: $negative-shadow-convex, $negative-shadow-convex,
+    $primary-shadow-concave;
 }
-@mixin button-active-danger {
+@mixin button-active-danger($negative-shadow-convex: 0 0 0 #00000000) {
   background: $danger;
-  box-shadow: 0 0 0 #00000000, 0 0 0 #00000000, $danger-shadow-concave;
+  box-shadow: $negative-shadow-convex, $negative-shadow-convex,
+    $danger-shadow-concave;
 }
-@mixin button-unactive {
+@mixin button-unactive($negative-shadow-concave: inset 0 0 0 #00000000) {
   background: $base;
-  box-shadow: $shadow-convex, inset 0 0 0 #00000000;
+  box-shadow: $shadow-convex, $negative-shadow-concave;
 }
 @mixin button-hover {
   box-shadow: $shadow-convex-hover;
-}
-
-// border-radius
-@mixin radius-2 {
-  border-radius: 0.8rem;
 }
 
 // layout
