set variales for border-radius

--- a/src/stories/assets/scss/_variable.scss
+++ b/src/stories/assets/scss/_variable.scss
@@ -49,6 +49,15 @@ $spacing-6: 2.4rem;
 $spacing-7: 2.8rem;
 $spacing-8: 3.2rem;
 
+// for border-radius
+$radius-0: 0;
+$radius-1: 0.4rem;
+$radius-2: 0.8rem;
+$radius-3: 1.2rem;
+$radius-4: 1.6rem;
+$radius-5: 3.2rem;
+$circle: 50% 50%;
+
 // line-height
 $single-line: 135%;
 $multi-line: 140%;
