--- a/src/stories/assets/scss/_mixin.scss
+++ b/src/stories/assets/scss/_mixin.scss
@@ -1,4 +1,27 @@
 // text
+@mixin text-main {
+  color: $text-main;
+  font-size: $font-medium;
+  line-height: $single-line;
+  font-weight: medium;
+}
+@mixin text-label {
+  color: $text-main;
+  font-size: $font-medium;
+  line-height: $single-line;
+  font-weight: medium;
+}
+@mixin text-button {
+  color: $button-gray;
+  font-weight: medium;
+  line-height: $fit;
+}
+@mixin text-sub-discription {
+  color: $text-sub;
+  font-size: $font-small;
+  line-height: $multi-line;
+  font-weight: regular;
+}
 @mixin text-liner {
   background: $primary-liner;
   -webkit-background-clip: text;
