--- a/src/stories/assets/scss/_variable.scss
+++ b/src/stories/assets/scss/_variable.scss
@@ -49,18 +49,25 @@ $spacing-6: 2.4rem;
 $spacing-7: 2.8rem;
 $spacing-8: 3.2rem;
 
+// font-size
+$font-small: 1.2rem;
+$font-medium: 1.4rem;
+$font-large: 1.6rem;
+$font-maximum: 1.8rem;
+
 // for border-radius
 $radius-0: 0;
 $radius-1: 0.4rem;
 $radius-2: 0.8rem;
 $radius-3: 1.2rem;
 $radius-4: 1.6rem;
-$radius-5: 3.2rem;
+$radius-button: 5rem;
 $circle: 50% 50%;
 
 // line-height
 $single-line: 135%;
 $multi-line: 140%;
+$fit: 100%;
 
 // Media Queries
 $pc-width: 769px;
