--- a/src/stories/assets/scss/_variable.scss
+++ b/src/stories/assets/scss/_variable.scss
@@ -91,5 +91,5 @@ $transition-transform: transform 0.25s ease-in-out;
 $transition-box-shadow: box-shadow 0.18s ease;
 
 // Media Queries
-$pc-width: 769rem;
-$sp-width: 480rem;
+$pc-width: 768px;
+$sp-width: 480px;
