--- a/src/stories/assets/scss/main.scss
+++ b/src/stories/assets/scss/main.scss
@@ -9,11 +9,14 @@ html {
   font-family: 'Noto Sans JP', Arial, Helvetica, sans-serif;
   box-sizing: border-box;
   color: $text-main;
-  @include tablet-and-pc {
+}
+@include tablet-and-pc {
+  html {
     font-size: 100%;
   }
 }
 body {
+  padding: 0 1.6rem;
   font-size: 1.4em;
 }
 input,
