update preview of mdx

--- a/src/stories/assets/scss/_variable.scss
+++ b/src/stories/assets/scss/_variable.scss
@@ -1,5 +1,10 @@
 /* Color styles */
 $base: #eff1f6;
+$base-liner: linear-gradient(
+  158.17deg,
+  #f3f5fa -1.94%,
+  #ebedf2 102.24%
+);
 $primary: #00c0c0;
 $primary-liner: linear-gradient(
   119.06deg,
