--- a/src/stories/assets/scss/main.scss
+++ b/src/stories/assets/scss/main.scss
@@ -19,6 +19,12 @@ body {
   padding: 0 1.6rem;
   font-size: 1.4em;
 }
+.css-tmvzag {
+  background: $base-liner !important;
+}
+.css-x6963h {
+  margin: 0 !important;
+}
 input,
 button,
 textarea,
